# SO3-Pose-Filter

./: .gitattributes  .gitignore  .mega-linter.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
.github/actions/ensure-amass-webdav-sample/: action.yml  validate_samples.py
.github/actions/prepare-amass-sample/: action.yml
.github/workflows/: accad-first-results.yml  accad-sample-smoke.yml  accuracy-leaderboard.yml  ci.yml  full-data-motion-stratified-accad.yml  full-data-motion-stratified-kit.yml  hmr-measurement-eval.yml  kit-sample-smoke.yml  mega-linter.yml  motion-stratified-accad.yml  prepare-dataset-caches.yml  so3-pose-filter-ci.yml  tags-and-github-release.yml
configs/: accad_dynamic.example.json  accad_dynamic_benchmark.example.json  accad_first_results.example.json  accad_first_results_benchmark.example.json  amass_small.example.json  detector_measurements.example.json  example.json  hmr_measurements.example.json  private_accad_eval.example.json  private_kit_eval.example.json  realistic_measurements.example.json
docs/: accuracy_leaderboard.md  bayescatrack_artifact_workflow.md  detector_measurements.md  hmr_measurements.md  reproduce.md
pose_filter/: __init__.py  data.py  evaluation.py  experiment.py  measurements.py  particle_filter.py  plotting.py  quaternion.py  so3.py  transitions.py
results/accad_dynamic_first_results/: benchmark_metrics.csv  first_results_summary.json  transition_metrics.csv
results/accad_dynamic_mlp_single_point/: benchmark_metrics.csv  first_results_summary.json  transition_metrics.csv
scripts/: build_accuracy_leaderboard.py  download_accad_webdav_sample.py  download_amass_sample.py  download_webdav_amass_sample.py  import_detector_measurements.py  import_hmr_measurements.py  make_toy_amass.py  package_paper_artifact.py  prepare_amass_sample.py  prepare_amass_windows.py  run_detector_measurement_eval.py  run_experiment.py  run_first_results_benchmark.py  run_model_sweep.py  run_motion_stratified_private_accad_eval.py  run_private_accad_eval.py  run_realistic_measurement_benchmark.py  write_experiment_manifest.py
src/pose_filter/: __init__.py  block_particle_filter.py  constant_velocity.py  data.py  detector_evaluation.py  detector_import.py  evaluation.py  experiment.py  hmr_measurements.py  measurement_config.py  measurements.py  model_factory.py  particle_filter.py  plotting.py  proposal_particle_filter.py  proposals.py  pyrecest_filter.py  quaternion.py  realistic_evaluation.py  smoothing.py  so3.py  transitions.py
tests/: _path.py  test_accad_webdav_sample.py  test_adaptive_gaussian_rw.py  test_block_particle_filter.py  test_build_accuracy_leaderboard.py  test_constant_velocity.py  test_detector_import.py  test_hmr_measurements.py  test_measurement_conditioned_proposal.py  test_motion_stratified_private_eval.py  test_package_paper_artifact.py  test_packaging_metadata.py  test_pipeline.py  test_pyrecest_backend.py  test_quaternion.py  test_realistic_measurements.py  test_smoothing.py  test_so3.py
