[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "so3-pose-filter"
version = "0.1.0"
description = "Prototype for recursive Bayesian filtering of human pose trajectories on SO(3)^K."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Florian Pfaff" }]
dependencies = ["numpy>=1.24", "pyrecest>=1.1.1"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 180
target-version = ["py311"]

[tool.ruff]
line-length = 180

[tool.isort]
profile = "black"

[tool.pylint.MAIN]
py-version = "3.13"
fail-under = 10
ignore = ["CVS"]
ignored-modules = ["pyrecest.backend", "healpy"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "C",
  "W0221",
  "redefined-builtin",
  "cyclic-import",
]

[tool.pylint.FORMAT]
max-line-length = 180

[tool.pylint.DESIGN]
max-args = 6
max-parents = 15
max-public-methods = 25
min-public-methods = 0

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
mypy_path = "src"
