[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "so3-pose-filter"
version = "0.1.0"
description = "Prototype for recursive Bayesian filtering of human pose trajectories on SO(3)^K."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.15"
authors = [{ name = "Florian Pfaff" }]
keywords = ["SO(3)", "Bayesian filtering", "particle filter", "human motion", "SMPL", "AMASS"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.24", "pyrecest @ git+https://github.com/FlorianPfaff/PyRecEst.git@main"]

[project.urls]
Homepage = "https://github.com/IPS-Stuttgart/SO3-Pose-Filter"
Repository = "https://github.com/IPS-Stuttgart/SO3-Pose-Filter"
Issues = "https://github.com/IPS-Stuttgart/SO3-Pose-Filter/issues"
Documentation = "https://github.com/IPS-Stuttgart/SO3-Pose-Filter/blob/main/docs/reproduce.md"

[project.optional-dependencies]
torch = ["torch>=2.2"]
dev = [
  "black>=25.1",
  "build>=1.2",
  "mypy>=1.15",
  "pylint>=3.3",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "twine>=6.1",
]

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 180
target-version = ["py311"]

[tool.ruff]
line-length = 180

[tool.isort]
profile = "black"

[tool.pylint.MAIN]
py-version = "3.13"
fail-under = 10
ignore = ["CVS"]
ignored-modules = ["pyrecest.backend", "healpy"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "C",
  "W0221",
  "redefined-builtin",
  "cyclic-import",
]

[tool.pylint.FORMAT]
max-line-length = 180

[tool.pylint.DESIGN]
max-args = 6
max-parents = 15
max-public-methods = 25
min-public-methods = 0

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
mypy_path = "src"
